--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,9 +1,35 @@
+@import '../abstracts/variables.scss';
+
+// layout of the page
 .page {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
+    background-color: $primary;
 
     &__main {
         flex: 1 1 0%;
+        padding: 0 1.875rem;
+        // margin: 1.875rem;
+    }
+}
+
+.buy{
+    width: 100%;
+    background-color: red;
+    display: flex;
+
+    justify-content: center;
+
+    &__internallinks{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      
+        &-link{
+            display: flex;
+            flex-direction: column;
+        }
+
     }
 }
